# DevMate

./: .gitignore  Dockerfile  Makefile  README.md  README.zh-CN.md  config.toml.example  docker-compose.yml  pyproject.toml
.skills/: .gitkeep  example_skill.md
.skills/example_skill/: SKILL.md
.skills/fastapi-project/: SKILL.md
.skills/python-module/: SKILL.md
devmate/: checklist.md
docs/: ARCHITECTURE.md  CHECKLIST.md  frontend_guidelines.md  internal_fastapi_guidelines.md  project_template_guide.md
mcp_server/: __init__.py  server.py
scripts/: lint.sh
src/devmate/: __init__.py  __main__.py  agent.py  config.py  file_tools.py  image_tool.py  llm.py  mcp_patch.py  rag.py  skills.py  storage.py  tools.py
tests/: conftest.py  helpers.py  test_agent.py  test_agent_e2e.py  test_config.py  test_e2e.py  test_file_tools.py  test_integration.py  test_mcp_server.py  test_rag.py  test_skills.py  test_tool_loop.py
